    several other build systems by using different "generators" provided
    by CMake (for instance Ninja, CodeBlocks, Eclipse, KDevelop3, etc.).
    See README.CMake.txt for more information.

  - autoconf/configure is still supported by the FLTK team for backwards
    compatibility with older systems that lack CMake support.


  New Features and Extensions

  - Added '--enable-print' option to configure effective under X11 platforms
    and with 'yes' default value. Using '--enable-print=no' removes print
    and PostScript support from the FLTK library, thus reducing its size.
  - Added Fl_Surface_Device::push_current(new_surface) and
    Fl_Surface_Device::pop_current() to set/unset the current surface
    receiving graphics commands.
  - X11 platform: Added support for drawing text with the pango library
    which allows to draw most scripts supported by Unicode, including CJK
    and right-to-left scripts. The corresponding CMake option is
    OPTION_USE_PANGO. The corresponding configure option is --enable-pango.
    This option is OFF by default.

  New Configuration Options (ABI Version)

  - FLTK's ABI version can be configured with 'configure' and CMake.
    See documentation in README.abi-version.txt.


  1.4.0 ABI FEATURES

  - None. FLTK 1.4.0 has a new ABI, breaking 1.3.x ABI.


  Other Improvements

  - (add new items here)
  - Renamed test/help demo program to test/help_dialog to avoid name
    conflict with CMake auto-generated target 'help'.
  - Many documentation fixes, clarifications, and enhancements.


  Bug Fixes

  - (add new items here)
  - Fix line number alignment in Fl_Text_Display/Editor (STR #3363).
  - Fix ignored buffer pre-allocation (requestedSize) in Fl_Text_Buffer.
    See fltk.general "Fl_Text_Buffer constructor bug" on Dec 5, 2016.
  - Fix build with configure --enable-cairo --enable-cairoext,
    see this report in fltk.general:
    https://groups.google.com/forum/#!topic/fltkgeneral/x80qQ6wt0s4


  Removed Features
